🩹 Fix: only Note-button height was misaligned [#25]

--- a/assets/stylesheets/blog/share-button.scss
+++ b/assets/stylesheets/blog/share-button.scss
@@ -126,6 +126,7 @@ ul {
 
 		button {
 			@include btn;
+			vertical-align: middle;
 		}
 
 		svg {
